updates styling of buttons to ensure colour contrasts are accessible along with fixing spacing between intro card elements

--- a/src/App.css
+++ b/src/App.css
@@ -2,47 +2,48 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  list-style: none;
-  background-color: rgba(80, 85, 97, 0.5);
+  background-color: rgba(80, 85, 97, 0.8);
   border-radius: 40px;
-  padding: 15px 0;
-  padding-top: 20px;
-  margin: 20px auto 30px auto;
-  max-width: 100vw; 
-  width: auto; 
-  margin-left: auto;
-  margin-right: auto; 
+  padding: 20px 30px;
+  margin: 0 auto;
+  max-width: 70vw;
+  width: auto;
   position: sticky;
-  top: 20px; 
+  top: 20px;
   z-index: 100;
-  overflow: hidden;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease;
 }
 
 .nav-bar ul {
   display: flex;
-  flex-grow: 1;
-  justify-content: space-between;
-  padding: 0;
-  margin: 0;
+  justify-content: space-around;
   width: 100%;
+  margin: 0;
+  padding: 0;
   list-style-type: none;
 }
 
 .nav-bar li {
-  flex-grow: 1;
   text-align: center;
 }
 
 .nav-bar a {
   color: azure;
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-weight: 600;
-  padding: 10px;
+  padding: 10px 20px;
   transition: color 0.3s ease, transform 0.3s ease;
 }
 
 .nav-bar a:hover {
+  color: #ffda79;
+  transform: scale(1.1);
+  border-bottom: 2px solid #ffda79; 
+}
+
+.nav-bar a:focus {
   color: #ffda79;
 }
 
@@ -51,13 +52,13 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh; 
+  margin: 0 auto;
 }
-
 
 .intro-card {
   width: 100%; 
   max-width: 60vw;
-  padding: 20px;
+  padding: 20px ;
   border-radius: 8px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -65,15 +66,18 @@
 }
 
 .hannah-icon {
-  max-width: 20vw;
+  max-width: 18vw;
 }
 
 .name-intro {
-  font-size: 2rem;
+  font-size: 2.1rem;
+  margin-bottom: 6px;
 }
 
 .role-intro {
   font-size: 2.5rem;
+  margin-top: 6px;
+  margin-bottom: 6px;
 }
 
 .personal-profile-intro {
